# lumen-pass

./: .env.example  .gitignore  .prettierignore  README.md  environments.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/: .env.example  README.md  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.module.css  page.tsx  providers.tsx
apps/web/app/lumenpass/: page.module.css  page.tsx
apps/web/components/: lumen-pass-section.module.css  lumen-pass-section.tsx
apps/web/convex/: courses.ts  groups.ts  invoices.ts  marketplace.ts  paylinks.ts  payouts.ts  posts.ts  saveGoals.ts  schema.ts  settlements.ts  users.ts  utils.ts
apps/web/convex/_generated/: api.d.ts
apps/web/docs/: youtube-demo-script.md
apps/web/hooks/: use-stellar-wallet.ts
apps/web/lib/stellar/: config.ts  format.ts  (+1 more)
apps/web/pages/: _error.tsx
apps/web/providers/: stellar-wallet-provider.tsx
contracts/guess-the-number/src/: xlm.rs
contracts/invoice-registry/: Cargo.toml
contracts/invoice-registry/src/: lib.rs
contracts/lumen-pass/: Cargo.toml
contracts/lumen-pass/src/: lib.rs
contracts/lumenpass-badges/: Cargo.toml
contracts/lumenpass-badges/src/: contract.rs  lib.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/nft-enumerable/src/: contract.rs
contracts/registrar/: Cargo.toml
contracts/registrar/src/: lib.rs
contracts/split-router/: Cargo.toml
contracts/split-router/src/: lib.rs
docs/: youtube-demo-script.md
scripts/: ci-build.cjs  deploy_testnet.sh
(+103 files in other folders)
